2004-10-14  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputMacro, OutputFunction, GetSignals): allow
	the author to use <!--PARAMETERS--> to specify the position of the
	parameter table if they want. Hopefully good enough for bug #99567.
	(MergeSourceDocumentation): end the paragraph before <!--PARAMETERS-->
	and start a new one after it.

	* doc/authors.txt: document <!--PARAMETERS-->.

	* style.css: don't underline links normally, as we output lots of
	them and it makes it very cluttered. Only underline links when the
	mouse hovers over them, and change the color. Fixes #108037.

	* gtk-doc.make (scan-build.stamp): depend on $(CFILE_GLOB) as well,
	since changes in properties need to be picked up by gtkdoc-scangobj.
	Bug #52458.

	* gtkdoc-mkdb.in: (ParseStructDeclaration): for fields that are
	function pointers, only return the function name, as otherwise the
	output gets really messy. Fixes #66618.

	* gtkdoc-mktmpl.in: 
	* gtkdoc-mkdb.in: 
	* gtkdoc-scan.in: 
	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: use '@PACKAGE_DATA_DIR@' instead of
	"@PACKAGE_DATA_DIR@" so that it isn't interpolated. It failed when
	$prefix was /software/@sys/usr. Fixes #113456.

2004-10-13  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: patch from Olexiy Avramchenko to add 3 new
	GdkEvent subtypes.

	* gtkdoc-scanobj.in: 
	* gtkdoc-scangobj.in: patch from Benjamin Otte to get rid of
	-Wsign-compare warnings. Bug #137013.

Fri Sep 17 01:13:24 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.xsl: Add the images from the gallery on top
	of the refentry they point to.

	* style.css: Move the css bits of the gallery implementation
	here.

Fri Sep 17 00:30:16 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.xsl: Don't generate <link rel="refentry">
	links, since e.g. the GTK+ docs contain MANY refentries.

2004-09-10  Damon Chaplin  <damon@gnome.org>

	* autogen.sh: support automake 1.8. (part of #151219).
