@@ -2648,6 +2648,15 @@ EOF
 WARNING: Parameter description missing in source code comment block -
          Func: $symbol Param: $tmpl_param_name.
 EOF
+
+			# If it looks like the parameters are there, but not
+			# in the right place, try to explain a bit better.
+			if ($src_doc =~ m/\@$tmpl_param_name:/) {
+			  print <<EOF;
+         Parameters must start on the line immediately after the function
+	 or macro name.
+EOF
+			}
 		    }
 		}
 
